--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,33 @@
+# === Node.js ===
+node_modules/
+dist/
+generated/
 
-# Node.js
-node_modules
-dist
-
-# Logs
+# === Logs ===
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Entornos
+# === Entornos ===
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Build frontend (React/Vite)
-frontend/dist
+# === Builds del frontend ===
+frontend/dist/
 
-# VSCode
-.vscode
+# === VSCode ===
+.vscode/
+
+# === Archivos a no versionar ===
+# Evita subir locks locales de npm/yarn
+package-lock.json
+frontend/package-lock.json
+backend/package-lock.json
+
+# === Otros opcionales ===
+# Ignorar archivos temporales del sistema
+.DS_Store
+Thumbs.db
