--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
