--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^4.1.16",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
