--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@prisma/client": "^6.19.0",
     "argon2": "^0.44.0",
     "axios": "^1.13.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
