--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": false
   },
 
-  "include": ["src", "src/express.d.ts"],
+  "include": ["src", "src/express.d.ts"]
 }
