--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.3.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
